modify index.html code

--- a/templates/index.html
+++ b/templates/index.html
@@ -68,7 +68,7 @@
       </div>
 
       <div class="panel panel-default">
-          <div class="panel-footer"> 当前时间{{ now | date:"Y-m-d H:m:s"  }}</div>
+          <div class="panel-footer"> 当前时间 {%  now "Y-m-d H:m:s"  %}</div>
       </div>
     </div>
 
